--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 ### Drupal ###
 # Ignore configuration files that may contain sensitive information.
-sites/*/*settings*.php
+sites/*/settings*.php
 
 # Ignore paths that contain generated content.
 cache/
